force-app/main/default/objects/AH_Finance_Request__c/AH_Finance_Request__c.object-meta.xml
<CustomObject>
    <description>NICC-030091
This object is used to capture requests for the various teams in Finance that must go through a formal approval process.   This was initially created as proof of concept to replace the FFA Credit Memo request form which is currently done in Excel.</description>
    <label>Finance Request</label>
    <nameField>
        <displayFormat>FR-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>