force-app/main/default/objects/AH_Finance_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-042019 - The Account record related to this Finance Request</description>
    <inlineHelpText>The Account record related to this Finance Request</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Finance Requests</relationshipLabel>
    <relationshipName>Finance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>