force-app/main/default/objects/AH_Finance_Request__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <businessOwnerGroup>DEPT_Finance</businessOwnerGroup>
    <description>NICC-037379</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Required for Electronic Payment.</inlineHelpText>
    <label>Bank Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>