force-app/main/default/objects/AH_Finance_Request__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-042019 - Account Owner</description>
    <inlineHelpText>Account Owner</inlineHelpText>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Finance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>