force-app/main/default/objects/AH_Finance_Request__c/fields/Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Region__c</fullName>
    <description>NICC-042019 - Sales region account is located</description>
    <formula>Account__r.Support_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sales region account is located</inlineHelpText>
    <label>Account Region</label>
    <type>Text</type>
</CustomField>