force-app/main/default/objects/AH_Finance_Request__c/fields/Account_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Shipping_Address__c</fullName>
    <description>NICC-042019 - Account Shipping Address</description>
    <formula>IF(LEN(Account__r.ShippingCity)&gt;0, Account__r.ShippingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
IF(LEN(Account__r.ShippingState )&gt;0, Account__r.ShippingState &amp; &quot; &quot; , &quot;&quot; )&amp;
IF(LEN(Account__r.ShippingCountry) &gt;0, Account__r.ShippingCountry,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account Shipping Address</inlineHelpText>
    <label>Account Shipping Address</label>
    <type>Text</type>
</CustomField>