force-app/main/default/objects/AH_Finance_Request__c/fields/Account_Total_Requests_Payment_Plans__c.field-meta.xml
<CustomField>
    <fullName>Account_Total_Requests_Payment_Plans__c</fullName>
    <description>NICC-042019 - The total number of finance requests an account has requested specifically for payment plans.</description>
    <inlineHelpText>The total number of finance requests an account has requested specifically for payment plans.</inlineHelpText>
    <label>Account Total Requests - Payment Plans</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>