force-app/main/default/objects/AH_Finance_Request__c/fields/Account_Valuation__c.field-meta.xml
<CustomField>
    <fullName>Account_Valuation__c</fullName>
    <description>NICC-042019 - Current value of the account.</description>
    <inlineHelpText>Sum of the total activity line amount for all &quot;current&quot; activity lines where revenue category &lt;&gt; Services.

Current  = Activity line start date &lt;= TODAY  Activity line end date &gt;=TODAY</inlineHelpText>
    <label>Account Valuation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>