force-app/main/default/objects/AH_Finance_Request__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <inlineHelpText>The current approval status of the Finance Request</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending Billing Review Approval</fullName>
            </value>
            <value>
                <fullName>Pending Manger Approval</fullName>
            </value>
            <value>
                <fullName>Pending CFO Approval</fullName>
            </value>
            <value>
                <fullName>Pending SLT Approval</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Committee Approved</fullName>
            </value>
            <value>
                <fullName>Committee Rejected</fullName>
            </value>
            <value>
                <fullName>Ready to Process - Finance</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>