force-app/main/default/objects/AH_Finance_Request__c/fields/Approval_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_Date__c</fullName>
    <description>This field is automatically populated with the current date whenever the Approval Status changes</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is automatically populated with the current date whenever the Approval Status changes</inlineHelpText>
    <label>Approval Status Date</label>
    <type>Date</type>
</CustomField>