force-app/main/default/objects/AH_Finance_Request__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <description>NICC-042019 - Account Billing Address</description>
    <formula>IF(LEN(Account__r.BillingCity)&gt;0, Account__r.BillingCity &amp; &quot;, &quot; , &quot;&quot; )&amp;
IF(LEN(Account__r.BillingState)&gt;0, Account__r.BillingState&amp; &quot; &quot; , &quot;&quot; )&amp;
IF(LEN(Account__r.BillingCountry) &gt;0, Account__r.BillingCountry,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account Billing Address</inlineHelpText>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>