force-app/main/default/objects/AH_Finance_Request__c/fields/Billing_Contract__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Billing Contract that is related to the Sales Invoice and Sales Credit Note Request</inlineHelpText>
    <label>Billing Contract</label>
    <referenceTo>Billing_Contract__c</referenceTo>
    <relationshipLabel>Finance Requests</relationshipLabel>
    <relationshipName>Finance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>