force-app/main/default/objects/AH_Finance_Request__c/fields/Cash_Entry__c.field-meta.xml
<CustomField>
    <fullName>Cash_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-037379
CSH # related with the refund if applicable</description>
    <inlineHelpText>CSH # related with the refund if applicable</inlineHelpText>
    <label>Cash Entry</label>
    <referenceTo>c2g__codaCashEntry__c</referenceTo>
    <relationshipLabel>Finance Requests</relationshipLabel>
    <relationshipName>Finance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>