force-app/main/default/objects/AH_Finance_Request__c/fields/CC_Name_on_Card__c.field-meta.xml
<CustomField>
    <fullName>CC_Name_on_Card__c</fullName>
    <businessOwnerGroup>DEPT_Finance</businessOwnerGroup>
    <description>NICC-037379
The full name of the credit card used to pay via customer&apos;s portal</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>The full name of the credit card used to pay via customer&apos;s portal</inlineHelpText>
    <label>CC Name on Card</label>
    <length>50</length>
    <type>Text</type>
</CustomField>