force-app/main/default/objects/AH_Finance_Request__c/fields/CC_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Transaction_Date__c</fullName>
    <businessOwnerGroup>DEPT_Finance</businessOwnerGroup>
    <description>NICC-037379
The date of credit card charge settles on customer&apos;s statement</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date of credit card charge settles on customer&apos;s statement</inlineHelpText>
    <label>CC Transaction Date</label>
    <length>12</length>
    <type>Text</type>
</CustomField>