force-app/main/default/objects/AH_Finance_Request__c/fields/Confirmed_Occupancy_Level__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Occupancy_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-042019 - Sales to indicate they have received proof of occupancy level at the time of the request</description>
    <inlineHelpText>Sales to indicate they have received proof of occupancy level at the time of the request</inlineHelpText>
    <label>Confirmed Occupancy Level</label>
    <type>Checkbox</type>
</CustomField>