force-app/main/default/objects/AH_Finance_Request__c/fields/Credit_Note_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Reason__c</fullName>
    <businessOwnerGroup>DEPT_Finance</businessOwnerGroup>
    <description>Updated per NICC-037379.  Field Label changed from &quot;Credit Note Reason&quot; to &quot;Reason&quot;
Updates to values, NICC-042151.
NICC-058517</description>
    <inlineHelpText>The business reason for the Finance Request</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bad Debt</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Cancellation - Full Invoice</fullName>
                <isActive>false</isActive>
                <label>Cancellation - Full Invoice</label>
            </value>
            <value>
                <fullName>Cancellation - Partial Invoice</fullName>
                <isActive>false</isActive>
                <label>Cancellation - Partial Invoice</label>
            </value>
            <value>
                <fullName>Concession</fullName>
            </value>
            <value>
                <fullName>Contract Change</fullName>
            </value>
            <value>
                <fullName>Customer Service - Goodwill</fullName>
            </value>
            <value>
                <fullName>Duplicate Payment</fullName>
            </value>
            <value>
                <fullName>Historical Cancellation</fullName>
                <isActive>false</isActive>
                <label>Historical Cancellation</label>
            </value>
            <value>
                <fullName>Historical Cancellation – Full Invoice</fullName>
                <isActive>false</isActive>
                <label>Historical Cancellation – Full Invoice</label>
            </value>
            <value>
                <fullName>Historical Cancellation – Partial Invoice</fullName>
                <isActive>false</isActive>
                <label>Historical Cancellation – Partial Invoice</label>
            </value>
            <value>
                <fullName>Invoice Correction</fullName>
            </value>
            <value>
                <fullName>Invoice Revision</fullName>
                <isActive>false</isActive>
                <label>Invoice Revision</label>
            </value>
            <value>
                <fullName>Migration</fullName>
                <isActive>false</isActive>
                <label>Migration</label>
            </value>
            <value>
                <fullName>Open Credit</fullName>
            </value>
            <value>
                <fullName>Overpayment</fullName>
            </value>
            <value>
                <fullName>RVP Discretionary Credit</fullName>
            </value>
            <value>
                <fullName>SLTC Cleanup</fullName>
            </value>
            <value>
                <fullName>User Reduction</fullName>
                <isActive>false</isActive>
                <label>User Reduction</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>