force-app/main/default/objects/AH_Finance_Request__c/fields/Currency_Rate_Formula_Field__c.field-meta.xml
<CustomField>
    <fullName>Currency_Rate_Formula_Field__c</fullName>
    <formula>CURRENCYRATE(TEXT(CurrencyIsoCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Rate Formula Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>