force-app/main/default/objects/AH_Finance_Request__c/fields/Journal__c.field-meta.xml
<CustomField>
    <fullName>Journal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-037379
JNL # related with the refund if applicable</description>
    <inlineHelpText>JNL # related with the refund if applicable</inlineHelpText>
    <label>Journal</label>
    <referenceTo>c2g__codaJournal__c</referenceTo>
    <relationshipLabel>Finance Requests</relationshipLabel>
    <relationshipName>Finance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>