force-app/main/default/objects/AH_Finance_Request__c/fields/Management_Company__c.field-meta.xml
<CustomField>
    <fullName>Management_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-042019 -</description>
    <label>Management Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Finance Requests (Management Company)</relationshipLabel>
    <relationshipName>Finance_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>