force-app/main/default/objects/AH_Finance_Request__c/fields/Net_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Credit_Amount__c</fullName>
    <businessOwnerGroup>DEPT_Finance</businessOwnerGroup>
    <description>Updated per NICC-037379. Field label changed from &quot;Net Credit Amount&quot; to &quot;Net Amount&quot;</description>
    <inlineHelpText>The amount to be credited or refunded.  This would be the original amount requested minus any rebill amount</inlineHelpText>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>