force-app/main/default/objects/AH_Finance_Request__c/fields/Next_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Renewal_Date__c</fullName>
    <description>Next date a renewal will process for this account</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Next date a renewal will process for this account</inlineHelpText>
    <label>Next Renewal Date</label>
    <type>Date</type>
</CustomField>