force-app/main/default/objects/AH_Finance_Request__c/fields/of_Months_Requested__c.field-meta.xml
<CustomField>
    <fullName>of_Months_Requested__c</fullName>
    <description>NICC-042019 - Number of months customer requesting relief extended</description>
    <inlineHelpText>Number of months customer requesting relief extended</inlineHelpText>
    <label># of Months Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>More than 3 months</fullName>
            </value>
            <value>
                <fullName>More than 2 months</fullName>
                <isActive>false</isActive>
                <label>More than 2 months</label>
            </value>
            <value>
                <fullName>N/A - Payment Plan</fullName>
                <isActive>false</isActive>
                <label>N/A - Payment Plan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>