force-app/main/default/objects/AH_Finance_Request__c/fields/Relief_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Relief_Request_Type__c</fullName>
    <description>NICC-042019 - The type of relief the customer is requesting.</description>
    <inlineHelpText>Payment Plan:  The due date for invoices will be issues to extend by 30/60/90 days.
Fees Relief:  Amadeus will credit or waive future charges for a limited number of months, subject to certain conditions.</inlineHelpText>
    <label>Relief Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fees Relief Request</fullName>
            </value>
            <value>
                <fullName>Payment Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>