force-app/main/default/objects/AH_Finance_Request__c/fields/Relief_Status__c.field-meta.xml
<CustomField>
    <fullName>Relief_Status__c</fullName>
    <description>NICC-042019 - The relief status progress</description>
    <inlineHelpText>The relief status progress</inlineHelpText>
    <label>Relief Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Committee Approved</fullName>
            </value>
            <value>
                <fullName>Payment Plan Validated</fullName>
            </value>
            <value>
                <fullName>Payment Plan Approved</fullName>
            </value>
            <value>
                <fullName>Payment Plan Rejected</fullName>
            </value>
            <value>
                <fullName>Ready To Process - Finance</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Committee Rejected</fullName>
                <isActive>false</isActive>
                <label>Committee Rejected</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
                <isActive>false</isActive>
                <label>Pending Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>