force-app/main/default/objects/AH_Finance_Request__c/fields/Renewal_Invoiced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Invoiced_Amount__c</fullName>
    <description>If the next renewal has been invoiced, the amount which it has been invoiced for.</description>
    <inlineHelpText>If the next renewal has been invoiced, the amount which it has been invoiced for.</inlineHelpText>
    <label>Renewal Invoiced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>