force-app/main/default/objects/AH_Finance_Request__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-042019 -</description>
    <inlineHelpText>The sales manager requesting relief of behalf of account</inlineHelpText>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Finance_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>