force-app/main/default/objects/AH_Finance_Request__c/fields/Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Routing_Number__c</fullName>
    <businessOwnerGroup>DEPT_Finance</businessOwnerGroup>
    <description>NICC-037379
Customer&apos;s Bank routing number for electronic payment</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Customer&apos;s Bank routing number for electronic payment</inlineHelpText>
    <label>Routing Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>