force-app/main/default/objects/AH_Finance_Request__c/fields/S_C_Credit_Currency__c.field-meta.xml
<CustomField>
    <fullName>S_C_Credit_Currency__c</fullName>
    <businessOwnerGroup>DEPT_Finance</businessOwnerGroup>
    <description>Currency in which to produce the S&amp;C credit for customer USD, GBP, EUR, SGD, AUD, CNY, THB  NICC-042944</description>
    <inlineHelpText>Currency in which to produce the S&amp;C credit for customer USD, GBP, EUR, SGD, AUD, CNY, THB</inlineHelpText>
    <label>S&amp;C Credit Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>SGD</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>CNY</fullName>
            </value>
            <value>
                <fullName>THB</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>