force-app/main/default/objects/AH_Finance_Request__c/fields/S_C_Relief_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>S_C_Relief_Credit_Amount__c</fullName>
    <businessOwnerGroup>DEPT_Finance</businessOwnerGroup>
    <description>S&amp;C Amount to be credited to support the COVID 19 Relief efforts. NICC-042944</description>
    <inlineHelpText>S&amp;C Amount to be credited to support the COVID 19 Relief efforts</inlineHelpText>
    <label>S&amp;C Relief Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>