force-app/main/default/objects/AH_Finance_Request__c/fields/Sales_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The original sales invoice to be credited</inlineHelpText>
    <label>Sales Invoice</label>
    <referenceTo>c2g__codaInvoice__c</referenceTo>
    <relationshipLabel>Finance Requests</relationshipLabel>
    <relationshipName>Finance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>