force-app/main/default/objects/AH_Finance_Request__c/fields/Sales_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Date__c</fullName>
    <description>NICC-031087
The Invoice Date of the related Sales Invoice</description>
    <formula>Sales_Invoice__r.c2g__InvoiceDate__c</formula>
    <inlineHelpText>The Invoice Date of the related Sales Invoice</inlineHelpText>
    <label>Sales Invoice Date</label>
    <type>Date</type>
</CustomField>