force-app/main/default/objects/AH_Finance_Request__c/fields/USD_Amount__c.field-meta.xml
<CustomField>
    <fullName>USD_Amount__c</fullName>
    <formula>Net_Credit_Amount__c / Currency_Rate_Formula_Field__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net Credit Amount in USD</inlineHelpText>
    <label>USD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>