force-app/main/default/objects/AH_Finance_Request__c/fields/Years_as_Customer__c.field-meta.xml
<CustomField>
    <fullName>Years_as_Customer__c</fullName>
    <description>NICC-042019 - Sales to indicate the number of years Amadeus has provided service/products to the customer</description>
    <inlineHelpText>Sales to indicate the number of years Amadeus has provided service/products to the customer</inlineHelpText>
    <label>Years as Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 1 year</fullName>
            </value>
            <value>
                <fullName>1 to 3 years</fullName>
            </value>
            <value>
                <fullName>3 to 5 years</fullName>
            </value>
            <value>
                <fullName>More than 5 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>