force-app/main/default/objects/AH_Finance_Request__c/recordTypes/COVID_19.recordType-meta.xml
<RecordType>
    <fullName>COVID_19</fullName>
    <active>true</active>
    <description>COVID-19 Finance Request</description>
    <label>COVID-19</label>
</RecordType>