force-app/main/default/objects/AH_Finance_Request__c/recordTypes/Refund_Request.recordType-meta.xml
<RecordType>
    <fullName>Refund_Request</fullName>
    <active>true</active>
    <label>Refund Request</label>
</RecordType>