force-app/main/default/objects/AH_Finance_Request__c/recordTypes/Sales_Credit_Note_Request.recordType-meta.xml
<RecordType>
    <fullName>Sales_Credit_Note_Request</fullName>
    <active>true</active>
    <label>Sales Credit Note Request</label>
</RecordType>