force-app/main/default/objects/AH_Finance_Request__c/validationRules/Refund_Payment_Information_CC.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_Payment_Information_CC</fullName>
    <active>true</active>
    <description>Certain field is required when selecting a Payment Type</description>
    <errorConditionFormula>AND (
RecordType.Name = &quot;Refund Request&quot;,
ISPICKVAL(Payment_Type__c,&quot;credit card&quot;)
&amp;&amp;
or(
ISBLANK(CC_Transaction_Date__c),
ISBLANK(CC_Name_on_Card__c))
)</errorConditionFormula>
    <errorMessage>Credit card info are required for Credit Card Refund</errorMessage>
</ValidationRule>