force-app/main/default/objects/AH_Finance_Request__c/validationRules/Refund_Payment_Information_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_Payment_Information_Check</fullName>
    <active>true</active>
    <description>Certain field is required when selecting a Payment Type</description>
    <errorConditionFormula>AND (
RecordType.Name = &quot;Refund Request&quot;,
ISPICKVAL(Payment_Type__c,&quot;Check&quot;)
&amp;&amp;
or(
ISBLANK(Name_on_Check__c),
ISBLANK(Mailing_Address__c))
)</errorConditionFormula>
    <errorMessage>Name on Check and Mailing Address are required for check payment.</errorMessage>
</ValidationRule>