force-app/main/default/objects/AH_Finance_Request__c/validationRules/Refund_Payment_Information_Electronic.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_Payment_Information_Electronic</fullName>
    <active>true</active>
    <description>Certain field is required when selecting a Payment Type</description>
    <errorConditionFormula>AND (
RecordType.Name = &quot;Refund Request&quot;,
ISPICKVAL(Payment_Type__c,&quot;Electronic&quot;)
&amp;&amp;
or(
ISBLANK(Account_Number__c),
ISBLANK(Bank_Address__c),
ISBLANK(Routing_Number__c),
ISBLANK(Beneficiary_Name__c))
)</errorConditionFormula>
    <errorMessage>Beneficiary name, bank info, account #, and routing are required for electronic payment.</errorMessage>
</ValidationRule>