force-app/main/default/objects/AH_Finance_Request__c/listViews/All_Completed_Finance_Requests.listView-meta.xml
<ListView>
    <fullName>All_Completed_Finance_Requests</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Net_Credit_Amount__c</columns>
    <columns>Sales_Invoice__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AH_Finance_Request__c.Refund_Request</value>
    </filters>
    <label>All Completed Finance Requests</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>