force-app/main/default/objects/AH_Finance_Request__c/listViews/All_Finance_Requests.listView-meta.xml
<ListView>
    <fullName>All_Finance_Requests</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Billing_Contract__c</columns>
    <columns>Sales_Invoice__c</columns>
    <columns>Net_Credit_Amount__c</columns>
    <columns>Rebill__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <label>All Finance Requests</label>
    <language>en_US</language>
</ListView>